ghdl (0.33-1) UNRELEASED; urgency=low

  * QA upload.

  [ Joris van Rantwijk ]
  * New upstream release. (Closes: #573721, #585748, #573885, #584476)
  * Fix building of ghdl for Debian jessie. (Closes: #695303)
  * Switch to LLVM backend instead of GCC. (Closes: #392952)
  * Update homepage to sourceforge.

  [ Mateusz Łukasik ]
  * Bump Standards Version to 3.9.6.
  * Add debian/watch.
  * Update lintian-overrides for spelling errors.
  * Install NEWS as upstream changelog.
  * Add manpages for ghdl1-llvm.

 -- Joris van Rantwijk <joris@jorisvr.nl>  Sun, 04 Oct 2015 11:08:00 +0200

ghdl (0.29+gcc4.3.4+dfsg-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix FTBFS on multiarch systems. (Closes: #635923)
  * Don't build the package twice.
  * Whole changes have been merged from Ubuntu.

 -- Artur Rona <ari-tczew@tlen.pl>  Sat, 05 May 2012 23:04:42 +0200

ghdl (0.29+gcc4.3.4+dfsg-1) unstable; urgency=low

  * New upstream release (closes: #548004)
  * Updated to policy 3.8.3
  * Now using gcc-4.3.4
  * Now building with gnat-4.4

 -- Wesley J. Landaker <wjl@icecavern.net>  Sun, 24 Jan 2010 16:09:58 -0700

ghdl (0.27+svn110+gcc4.3.3+dfsg-1) unstable; urgency=low

  * Now using gcc-4.3.3
  * Updated copyright information
  * Added Vcs-Git information
  * Updated to policy 3.8.1 

 -- Wesley J. Landaker <wjl@icecavern.net>  Thu, 02 Apr 2009 21:23:07 -0600

ghdl (0.27+svn110+gcc4.3.2~dfsg-3) unstable; urgency=low

  * Ensure that gnatbind uses the correct CC, not cc
  * Added Vcs-Bzr information

 -- Wesley J. Landaker <wjl@icecavern.net>  Wed, 05 Nov 2008 16:13:37 -0700

ghdl (0.27+svn110+gcc4.3.2~dfsg-2) unstable; urgency=low

  * Moving to unstable.
  * Updated to policy 3.8.0

 -- Wesley J. Landaker <wjl@icecavern.net>  Sun, 02 Nov 2008 19:45:31 -0700

ghdl (0.27+svn110+gcc4.3.2~dfsg-1) experimental; urgency=low

  * New upstream release (0.27)
  * Upstream patched to svn110
  * Now using gcc-4.3.2