@@ -2,10 +2,11 @@ Source: ghdl
 Section: non-free/electronics
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
-Build-Depends: debhelper (>= 9), gnat, llvm-3.5-dev, clang, zlib1g-dev, libedit-dev, texinfo
+Build-Depends: debhelper (>= 9), gnat, llvm-3.5-dev, clang, zlib1g-dev, libedit-dev
 Build-Conflicts: ghdl
 Homepage: https://sourceforge.net/projects/ghdl-updates/
-Vcs-Git: https://github.com/jorisvr/ghdl_debian
+Vcs-Browser: https://anonscm.debian.org/git/collab-maint/ghdl.git
+Vcs-Git: git://anonscm.debian.org/collab-maint/ghdl.git
 Standards-Version: 3.9.6
 
 Package: ghdl
